@@ -1,4 +1,7 @@
 2010-08-18  Miguel Sofer  <msofer@users.sf.net>
+	* generic/tclCmdAH.c (TclNRTryObjCmd): block tailcalling out of
+	the body of a non-bc'ed [try], #3046594
+
 	* generic/tclBasic.c:    Redesign of [tailcall] to
 	* generic/tclCmdAH.c:    (a) fix #3047235
 	* generic/tclCompile.h:  (b) enable fix for #3046594
@@ -6,7 +9,7 @@
 	* generic/tclInt.h:
 	* generic/tclNamesp.c:
 	* tests/tailcall.test:
-	
+
 2010-08-18  Donal K. Fellows  <dkf@users.sf.net>
 
 	* library/safe.tcl (AliasGlob): [Bug 3004191]: Restore safe [glob] to
